@@ -16,6 +16,9 @@ Changed
     the project will default to "default" for every request, until we move the
     data into the database (#180)
 
+    Bump bootstrap version to 4.4.1 and made some changes to the way tooltips
+    are initialized to fix modals not hiding (#177)
+
 Fixed
     Terminal sessions not opening properly
     Some instance settings can't be properly set (close #192)
